# splatsdb-ui

./: .gitignore  LICENSE  README.md  pyproject.toml  take_screenshots.py
splatsdb_ui/: __init__.py  app.py  engine_manager.py  main.py
splatsdb_ui/dialogs/: __init__.py
splatsdb_ui/embeddings/: __init__.py  engine.py  registry.py
splatsdb_ui/embeddings/providers/: __init__.py
splatsdb_ui/mixins/: __init__.py  audio_mixin.py  edit_mixin.py  file_mixin.py  job_mixin.py  search_mixin.py  settings_mixin.py  view_mixin.py
splatsdb_ui/utils/: __init__.py  api_client.py  icons.py  signals.py  state.py  theme.py
splatsdb_ui/views/: __init__.py  benchmark_view.py  cluster_view.py  collections_view.py  ebm_view.py  gaussian_splat_renderer.py  graph_view.py  ocr_view.py  search_view.py  spatial_view.py  splat3d_view.py  welcome_view.py
splatsdb_ui/widgets/: __init__.py  config_editor.py  engine_switcher.py  file_preview.py  io_tray.py  job_queue.py  node_inspector.py  param_panel.py  result_card.py  search_bar.py  status_bar.py
splatsdb_ui/workers/: __init__.py  embedding_worker.py  ocr_worker.py  search_worker.py
tests/: __init__.py  test_core.py
